# nate-web-service

./: .env  .gitignore  Dockerfile  LICENSE  README.md  build_container.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  start_server.sh  tox.ini
.github/workflows/: Tests.yml
app/: exception_handler.py  logging.conf  main.py  schema.py  vocab.py  vocabConstructor.py
app/extractor/: exception_handler.py  logging.conf  main.py  schema.py  vocabConstructor.py
tests/: test-urls  test_api.py
