[metadata]
name = extractor
description = Nate backend challenge
author = Akinola Antony Wilson
license = AkinAntonyWilson
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
packages =
    extractor
install_requires =
    anyio==3.6.1
    asgiref==3.5.2
    beautifulsoup4==4.11.1
    click==8.1.3
    decorator==5.1.1
    fastapi==0.78.0
    h11==0.13.0
    idna==3.3
    pydantic==1.9.1
    sniffio==1.2.0
    soupsieve==2.3.2.post1
    starlette==0.19.1
    typing_extensions==4.2.0
    uvicorn==0.17.6
    validators==0.20.0
    gunicorn==20.1.0
    requests==2.27.1
python_requires = >=3.8
package_dir =
    =app
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    requests==2.27.1

[flake8]
max-line-length = 160
